--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -10,9 +10,9 @@
           <!-- PROFILE -->
             <div class="profile-img">
               <% if @trip.user.photo.attached? %>
-                <%= cl_image_tag @trip.user.photo.key, crop: :fill, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+                <%= cl_image_tag @trip.user.photo.key %>
               <% else %>
-                <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+                <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier" %>
               <% end %>
                 <!--<img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cHJvZmlsZXxlbnwwfHwwfHw%3D&w=1000&q=80" alt="">-->
             </div>
@@ -46,7 +46,7 @@
       <div class="row">
         <div class="col-sm-6 col-md-5 col-lg-6 ms-4">
           <% if @trip.photo.attached? %>
-                <%= cl_image_tag @trip.photo.key, height: 400, width: 500, crop: :fill %>
+                <%= cl_image_tag @trip.photo.key, id: "trip-pic" %>
               <% else %>
                 <img id="trip-pic" src='https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs2.jpeg'>
               <% end %>
