edit user link added to current user profile page, now can check other profile pages

--- a/app/assets/stylesheets/components/_user_profilecard.scss
+++ b/app/assets/stylesheets/components/_user_profilecard.scss
@@ -36,3 +36,12 @@
 #userprofile-body {
   align-content: center;
 }
+
+.edit-profile {
+  color: black;
+  text-decoration: underline;
+
+    & :hover {
+      color: dimgray;
+    }
+}
