--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,14 +10,22 @@
           <div class="userprofile-card ms-4">
             <div id="userprofile-picture">
               <div class="mb-4 profile">
-                <% if current_user.photo.attached? %>
-                  <%= cl_image_tag current_user.photo.key %>
+                <% if @user.photo.attached? %>
+                  <%= cl_image_tag @user.photo.key %>
                 <% else %>
                   <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier" %>
                 <% end %>
                 <!--<img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cHJvZmlsZXxlbnwwfHwwfHw%3D&w=1000&q=80" alt="">-->
               </div>
+              <!--<button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#pfpModal">Update photo</button>
               <p>Update photo</p>
+              <div class="modal fade" id="pfpModal">
+                <div class="modal-body">-->
+                <% if @user == current_user %>
+                  <%= link_to "edit profile", edit_user_registration_path(@user), class: "edit-profile" %>
+                <% end %>
+                </div>
+              </div>
               </div>
             <div id="userprofile-body" class="mt-4 ps-3">
               <p>Lives in:</p>
@@ -33,11 +41,13 @@
           <div class="container pt-2">
             <div class="row align-items-start" style="display: contents;">
               <div class="col">
-                <h1>Hi, I am <%= current_user.full_name %> !</h1>
-                <p>Joined <%= current_user.created_at.year %></p>
-                <div id="edit">
-                  <p>Edit</p>
-                </div>
+                <h1>Hi, I am <%= @user.full_name %> !</h1>
+                <p>Joined <%= @user.created_at.year %></p>
+                <% if @user == current_user %>
+                  <div id="edit">
+                    <p>Edit</p>
+                  </div>
+                <% end %>
               </div>
               <div class="col pt-5">
                 <h3>About me:</h3>
@@ -61,9 +71,9 @@
 <!-- User Bookings -->
   <div class="container">
     <h3>Bookings</h3>
-    <div class="mb-2"><%= link_to "See all", bookings_path(current_user) %></div>
+    <div class="mb-2"><%= link_to "See all", bookings_path(@user) %></div>
     <div class="row row-cols-1 row-cols-md-3 g-4">
-    <% current_user.bookings.first(3).each do |booking| %>
+    <% @user.bookings.first(3).each do |booking| %>
       <div class="col">
         <div class="card h-100">
           <% if booking.trip.photo.attached? %>
