address on create is working with geocoder

--- a/app/views/pages/_info_window.html.erb
+++ b/app/views/pages/_info_window.html.erb
@@ -1,13 +1,13 @@
-
-  <div class="">
-    <h2 class="map-title"><%= trip.name %></h2>
-    <p><%= trip.address %></p>
-  </div>   
-  <div class="">
-    <% if trip.photo.attached? %>
-      <%= cl_image_tag trip.photo.key, class:"map-image" %>
-    <% else %>
-      <img class="map-image" src="https://cdn.pixabay.com/photo/2015/06/11/08/58/cappadocia-805624_1280.jpg" />
-    <% end %>
+  <div class="map-box">  
+    <div>
+      <h2 class="map-title"><%= trip.name %></h2>
+      <p><%= trip.address %></p>
+    </div>   
+    <div class="">
+        <% if trip.photo.attached? %>
+          <%= cl_image_tag trip.photo.key, class:"map-image" %>
+        <% else %>
+          <img class="map-image" src="https://cdn.pixabay.com/photo/2015/06/11/08/58/cappadocia-805624_1280.jpg" />
+        <% end %>
+    </div>
   </div>
-
