--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,13 +1,12 @@
 // === MEDIA QUERY === //
-// @media only screen and (max-width: 1390px) {
-//   .map {
-//     display: none;
-//   }
-// }
+@media only screen and (max-width: 1390px) {
+  .map {
+    display: none;
+  }
+}
 
 .mapboxgl-popup {
-  max-width: 200px;
-  padding: 15px;
+  max-width: 150px;
   margin: 10px;
 
   &:active  {
@@ -23,15 +22,27 @@
   font-size: 25px;
   color: rgb(47, 132, 189);
   border: none;
+  // opacity: 0;
 
   &:hover {
     color: red;
-    background-color: none;
+    background-color: transparent;
   }
 }
 
 .map-image {
   max-width:100%;
   max-height:100%;
-  border-radius: 10px;
+  border-radius: 3px;
+}
+
+.mapboxgl-ctrl-geocoder {
+  max-width: none;
+  width: 100%;
+  border: 1px solid lightgrey;
+  box-shadow: none;
+}
+
+.mapboxgl-ctrl-geocoder--button {
+  display: none;
 }
