--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -21,30 +21,31 @@
           </div>
         </div>
           <div class="d-flex ms-4 icons">
-          <% unless @trip.user == current_user %>
-            <%= simple_form_for [@trip, @booking] do |f| %>
-              <%= f.button :submit, "Join The Trip", class: "btn btn-dark join-btn" %>
+            <% unless @trip.user == current_user %>
+              <%= simple_form_for [@trip, @booking] do |f| %>
+                <%= f.button :submit, "Join The Trip", class: "btn btn-dark join-btn" %>
+              <% end %>
             <% end %>
-          <% end %>
 
-              <% if @user_bookmark.nil? %>
-                <%= simple_form_for [@trip, @bookmark] do |f| %>
-                 <%= f.submit do %>
-                    <%= cl_image_tag('https://res.cloudinary.com/dhilged09/image/upload/v1647627309/development/bookmark-regular_fip3cc.svg', class: "icon") %>
+                <% if @user_bookmark.nil? %>
+                  <%= simple_form_for [@trip, @bookmark] do |f| %>
+                  <div class ="icon">
+                    <%= image_submit_tag("https://res.cloudinary.com/dhilged09/image/upload/v1647627309/development/bookmark-regular_fip3cc.svg", class: "bookmark") %>
+                  </div>
+                  <% end %>
+                <% else %>
+                  <%= link_to bookmark_path(@user_bookmark), method:"delete", class:"icon" do%>
+                    <%= fa_icon('bookmark')%>
                   <% end %>
                 <% end %>
-              <% else %>
-                <%= link_to "destroy", bookmark_path(@user_bookmark), method:"delete" %>
-              <% end %>
 
-              <%= link_to chatroom_path(@chat), class: "icon" do %>
-                <%= fa_icon('paper-plane') %>
-              <% end  %>
+                <%= link_to chatroom_path(@chat), class: "icon" do %>
+                  <%= fa_icon('paper-plane') %>
+                <% end  %>
 
-              <%= link_to trip_path(@trip), target: "_blank", class: "icon" do %>
-                <%= fa_icon('share') %>
-              <% end  %>
-
+                <%= link_to trip_path(@trip), target: "_blank", class: "icon" do %>
+                  <%= fa_icon('share') %>
+                <% end  %>
           </div>
       </div>
     </div>
