favorites index cards are now link directed to trip posts

--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -4,6 +4,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4" style="flex-wrap: wrap;">
     <% current_user.bookmarks.each do |bookmark| %>
       <div class="col">
+      <%= link_to trip_path(bookmark.trip), class: "link_to_class" do %>
         <div class="card h-100">
           <%= cl_image_tag bookmark.trip.photo.key, class: "card-img-top"%>
           <div class="card-body">
@@ -12,6 +13,7 @@
             <p class="card-text"> Date: <%= bookmark.trip.start_date %> - <%= bookmark.trip.end_date %></p>
           </div>
         </div>
+      <% end  %>
       </div>
     <% end %>
     </div>
