--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -27,6 +27,7 @@
               <% end %>
             <% end %>
 
+              <% unless @trip.user == current_user %>
                 <% if @user_bookmark.nil? %>
                   <%= simple_form_for [@trip, @bookmark] do |f| %>
                   <div class ="icon">
@@ -38,6 +39,7 @@
                     <%= fa_icon('bookmark')%>
                   <% end %>
                 <% end %>
+              <% end %>
 
                 <%= link_to chatroom_path(@chat), class: "icon" do %>
                   <%= fa_icon('paper-plane') %>
