--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -22,7 +22,7 @@
   font-size: 25px;
   color: rgb(47, 132, 189);
   border: none;
-  // opacity: 0;
+  display: none;
 
   &:hover {
     color: red;
@@ -45,4 +45,8 @@
 
 .mapboxgl-ctrl-geocoder--button {
   display: none;
+}
+
+.map {
+  position: sticky;
 }
