basic layout of the review section css done

--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -196,6 +196,36 @@
             <!-- Carousel wrapper -->
           </div>
         </div>
+  <!-- Reviews section -->
+  <div class="container pt-5 wrapper_reviews">
+    <div class="row align-items-start">
+      <!-- Left side with header, leave review and sum of reviews -->
+      <div class="col reviews">
+        <div class="mb-4 leave review">
+          <button type="button" class="btn btn-dark">Write a Review</button>
+        </div>
+        <div class="mt-4 mb-4 all-reviews">
+          <h4>Average rating: 4.5</h4>
+          <p>5 Star reviews</p>
+          <p>4 Star reviews</p>
+          <p>3 Star reviews</p>
+          <p>2 Star reviews</p>
+          <p>1 Star reviews</p>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="container pt-2">
+          <div class="row align-items-start" style="display: contents;">
+            <div class="col">
+              <h4>All reviews</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
   <div class="push"></div>
 </main>
