--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -3,6 +3,11 @@
   height: 40px;
   border-radius: 50%;
 }
+
+.avatar-pfp {
+  border-radius: 50%;
+}
+
 .avatar-large {
   width: 56px;
   border-radius: 50%;
