--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,13 +3,23 @@
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
+  <div class="form-inputs edit-profile">
     <%= f.input :email, required: true, autofocus: true %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
 
+    <%= f.input :full_name,
+                required: false,
+                input_html: { autocomplete: "new-full_name" } %>
+    <%= f.input :user_name,
+                required: false,
+                input_html: { autocomplete: "new-user_name" } %>
+    <%= f.input :photo,
+                as: :file,
+                required: false,
+                input_html: { autocomplete: "new-photo" } %>
     <%= f.input :password,
                 hint: "leave it blank if you don't want to change it",
                 required: false,
