--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -12,3 +12,15 @@
   display: flex;
   flex-direction: row-reverse;
 }
+
+.review-button {
+  width: 150px;
+  background-color: rgb(0, 0, 0);
+  color: $white;
+  padding: 10px;
+
+  &:hover{
+    background-color: rgba(0, 0, 0, 0.8);
+    color: $white;
+  }
+}
