--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,5 +1,19 @@
-<h1>Test</h1>
-<h1>Test</h1>
-<h1>Test</h1>
-<h1>Test</h1>
-<h1>Test</h1>
+<div class="container">
+  <div class="mb-4">
+    <h1>Form</h1>
+  </div>
+
+  <h1>RATING</h1>
+
+  <div class="mb-4 mt-4">
+    <label for="exampleFormControlTextarea1" class="form-label">Type your review</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+  </div>
+
+<div class="mb-3">
+  <label for="exampleFormControlInput1" class="form-label">Title of your review</label>
+  <input class="form-control" id="exampleFormControlInput1">
+</div>
+
+
+</div>
