added push to footer

--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -10,10 +10,11 @@
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
   </div>
 
-<div class="mb-3">
-  <label for="exampleFormControlInput1" class="form-label">Title of your review</label>
-  <input class="form-control" id="exampleFormControlInput1">
-</div>
+  <div class="mb-3">
+    <label for="exampleFormControlInput1" class="form-label">Title of your review</label>
+    <input class="form-control" id="exampleFormControlInput1">
+  </div>
 
 
+  <div class="push"></div>
 </div>
