--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -9,7 +9,7 @@
           <%= cl_image_tag bookmark.trip.photo.key, class: "card-img-top"%>
           <div class="card-body">
             <h5 class="card-title">Trip name: <%= bookmark.trip.name %></h5>
-            <p class="card-text">Location: <%= bookmark.trip.location %></p>
+            <p class="card-text">Location: <%= bookmark.trip.address %></p>
             <p class="card-text"> Date: <%= bookmark.trip.start_date %> - <%= bookmark.trip.end_date %></p>
           </div>
         </div>
