I've done some styling on the profile page

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -98,6 +98,6 @@
   color: white;
 }
 
-.mapboxgl-ctrl-geocoder--suggestion-address {
-  // color: rgb(47, 132, 189);
-}
+// .mapboxgl-ctrl-geocoder--suggestion-address {
+//   // color: rgb(47, 132, 189);
+// }
