--- a/app/assets/stylesheets/components/_card_product.scss
+++ b/app/assets/stylesheets/components/_card_product.scss
@@ -1,4 +1,4 @@
-#card-product {
+.card-product {
   overflow: hidden;
   height: 300px;
   width: 800px;
@@ -7,41 +7,42 @@
   border-radius: 15px;
   box-shadow: 2px 2px #bbb6b6;
   border: 1px solid #bbb6b6;
+  cursor: pointer;
 
   &:hover {
     transform: scale(1.1);
   }
 }
 
-#card-product img {
+.card-product img {
   height: 300px;
   width: 225px;
   object-fit: cover;
 }
 
-#card-product .profile-icon {
+.card-product .profile-icon {
   height: 50px;
   width: 50px;
   border-radius: 50%;
 }
 
-#card-product p {
+.card-product p {
   font-size: 13px;
 }
 
-#card-product h2 {
+.card-product h2 {
   font-size: 26px;
 }
 
-#card-product h3 {
+.card-product h3 {
   font-size: 18px;
 }
 
-#card-product h4 {
+.card-product h4 {
   font-size: 16px;
 }
 
-#card-product li {
+.card-product li {
   list-style-type: none;
 }
 
