--- a/app/assets/stylesheets/components/_edit_profile.scss
+++ b/app/assets/stylesheets/components/_edit_profile.scss
@@ -1,7 +1,42 @@
-.edit-profile {
-  display: flex;
-  width: 30%;
-  flex-direction: column;
-  margin: 30px;
-  justify-content: center;
+.user-info-name{
+  padding: 10px;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.user-info-edit {
+  font-style: italic;
+  justify-content: space-between;
+}
+
+.user-info-about {
+  background-color: rgba(0, 0, 0, 0.3);
+  color: white;
+  padding: 25px;
+  border-radius: 7px;
+  box-shadow: 1px 1px rgba(0, 0, 0, 0.6);
+}
+
+.user-review,
+.user-booking,
+.user-Favorites,
+.pending-request-title {
+  background-color: rgba(0, 0, 0, 0.3);
+  color: white;
+}
+
+.card-favorites {
+  overflow: hidden;
+  height: 300px;
+  width: 80%;
+  margin-left: 72px;
+  background: white;
+  border-radius: 15px;
+  box-shadow: 2px 2px #bbb6b6;
+  border: 1px solid #bbb6b6;
+  cursor: pointer;
+
+  &:hover {
+    transform: scale(1.1);
+  }
 }
