--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
             <div id="userprofile-picture">
               <div class="mb-4 profile">
                 <% if @user.photo.attached? %>
-                  <%= cl_image_tag @user.photo.key, height: 128, width: 128, crop: :fill %>
+                  <%= cl_image_tag @user.photo.key %>
                 <% else %>
                   <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier" %>
                 <% end %>
@@ -23,12 +23,17 @@
                 <%= link_to "edit profile", edit_user_registration_path(@user), class: "edit-profile" %>
               <% end %>
             </div>
-            <div id="userprofile-body" class="mt-4 ps-3">
-              <p>Lives in:</p>
-              <p>Speaks:</p>
-            </div>
-            <div id="reviews" class="mt-4 ps-3">
-              <p>Reviews:</p>
+            <div id="userprofile-body" class="ps-3">
+              <div class="d-flex flex-column"> 
+                <h3 class="edit-profile-items">Lives in:</h3>
+                <p>Rio de Janeiro</p>
+              </div>
+
+              <div class="d-flex flex-column">
+                <h3 class="edit-profile-items">Speaks:</h3>
+                <p>English, Portuguese, Estonian</p>
+              </div>
+
             </div>
           </div>
         </div>
@@ -36,26 +41,29 @@
         <div class="col">
           <div class="container pt-2">
             <div class="row align-items-start" style="display: contents;">
-              <div class="col">
+              <div class="col user-info-name">
                 <h1>Hi, I am <%= @user.full_name %> !</h1>
-                <p>Joined <%= @user.created_at.year %></p>
-                <% if @user == current_user %>
-                  <div id="edit">
-                    <p>Edit</p>
-                  </div>
+                </div>
+                <div class="d-flex user-info-edit">
+                  <p>Joined <%= @user.created_at.year %></p>
+                  <% if @user == current_user %>
+                    <div>
+                      <p>Edit</p>
+                    </div>
                 <% end %>
               </div>
-              <div class="col pt-5">
+              <div class="col pt-5 user-info-about">
                 <h3>About me:</h3>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised</p>
               </div>
-              <div class="col pt-5">
+              <div class="col pt-5 text-center">
               <h3>What kind of traveler I am:</h3>
                <ul>
                   <li>The user answers will be displayed here</li>
                   <li>we still have to decide whether it will be done in ther registration form or not</li>
                 </ul>
               </div>
+
             </div>
           </div>
         </div>
@@ -64,10 +72,17 @@
     </div>
 
 <!-- Userprofile 2nd part -->
+<div class="container">
+<!-- User Reviews -->
+  <div class="user-review">
+    <h3>Reviews:</h3>
+  </div>
 <!-- User Bookings -->
-  <div class="container">
+<div>
+  <div class="user-booking">
     <h3>Bookings</h3>
-    <div class="mb-2"><%= link_to "See all", bookings_path(@user) %></div>
+  </div>
+  <div class="container mt-1 pt-0">
     <div class="row row-cols-1 row-cols-md-3 g-4">
     <% @user.bookings.first(3).each do |booking| %>
       <div class="col">
@@ -87,14 +102,18 @@
       </div>
     <% end %>
     </div>
+      <div class="mb-2 mt-2 text-end"><%= link_to "See all", bookings_path(@user) %></div>
   </div>
+</div>
 <!-- User Bookmarks -->
-  <div class="container">
+  <div class="container pt-0">
+  <div class="user-Favorites">
     <h3>Favorites</h3>
+  </div>
 
-    <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="row row-cols-1 row-cols-md-3 g-4 mt-3 mb-3">
       <div class="col">
-        <div class="card h-100">
+        <div class="card-favorites h-100">
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -103,7 +122,7 @@
         </div>
       </div>
       <div class="col">
-        <div class="card h-100">
+        <div class="card-favorites h-100">
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -112,7 +131,7 @@
         </div>
       </div>
       <div class="col">
-        <div class="card h-100">
+        <div class="card-favorites h-100">
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -122,5 +141,6 @@
       </div>
     </div>
   </div>
+</div>
   <div class="push"></div>
 </main>
