working now on the booking page

--- a/app/assets/stylesheets/components/_bookings.scss
+++ b/app/assets/stylesheets/components/_bookings.scss
@@ -14,3 +14,40 @@
   margin-top: 20px;
   cursor: pointer;
 }
+
+.booking-user-name {
+  cursor: pointer;
+}
+
+.booking-card {
+  width: 420px;
+  height: 500px;
+  padding: 1em;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-radius: 7px;
+  margin-left: 2em;
+  box-shadow: 2px 2px;
+  cursor: pointer;
+
+  img {
+    border-radius: 7px;
+  }
+}
+
+.pending {
+  color: orange;
+  font-style: italic;
+  font-weight: 300;
+}
+
+.confirmed {
+  color: green;
+  font-style: italic;
+  font-weight: 300;
+}
+
+.rejected {
+  color: red;
+  font-style: italic;
+  font-weight: 300;
+}
