--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -5,7 +5,7 @@
         <div class="card-pending">
           <div class="card-body">
             <h4>Request to join "<%= trip.name %>" by:</h4>
-            <%= booking.user.full_name %>
+            <h5 class="booking-user-name"><%= booking.user.full_name %></h5>
             <div id="trip-status-update">
               <%= link_to "Reject💔", reject_trip_booking_path(trip, booking), class: "btn btn-small" , method: "POST" %>
               <%= link_to "Accept🎉", accept_trip_booking_path(trip, booking), class: "btn btn-small", method: "POST" %>
@@ -24,13 +24,14 @@
     <div class="row row-cols-1 row-cols-md-3 g-4" style="flex-wrap: wrap;">
     <% current_user.bookings.each do |booking| %>
       <div class="col">
-        <div class="card h-100">
+        <div class="booking-card h-100">
           <%= cl_image_tag booking.trip.photo.key, class: "card-img-top"%>
           <div class="card-body">
-            <h5 class="card-title">Trip name: <%= booking.trip.name %></h5>
-            <p class="card-text">Location: <%= booking.trip.address %></p>
-            <p class="card-text"> Date: <%= booking.trip.start_date %> - <%= booking.trip.end_date %></p>
+            <h2 class="card-title"><%= booking.trip.name %></h2>
+            <h6 class="card-text">Location: <%= booking.trip.address %></h6>
+            <h6 class="card-text"> Date: <%= booking.trip.start_date %> - <%= booking.trip.end_date %></h6>
            <p class="card-text"><%= booking.status %></p>
+
           </div>
         </div>
       </div>
@@ -39,3 +40,4 @@
   </div>
 
     <div class="push"></div>
+    
