--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -96,7 +96,7 @@
             <h5 class="card-title">Trip name: <%= booking.trip.name %></h5>
             <p class="card-text">Location: <%= booking.trip.address %></p>
             <p class="card-text"> Date: <%= booking.trip.start_date %> - <%= booking.trip.end_date %></p>
-            <p class="card-text"><%= booking.status %></p>
+            <p class="card-text <%= booking_status(booking) %>"><%= booking.status %></p>
           </div>
         </div>
       </div>
