--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,45 +1,48 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container mx-auto">
+    <h2 class="text-center">Edit Your Profile</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= f.error_notification %>
 
-  <div class="form-inputs edit-profile">
-    <%= f.input :email, required: true, autofocus: true %>
+      <div class="form-inputs edit-profile container mx-auto">
+        <%= f.input :email, required: true, autofocus: true %>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+        <% end %>
+
+        <%= f.input :full_name,
+                    required: false,
+                    input_html: { autocomplete: "new-full_name" } %>
+        <%= f.input :user_name,
+                    required: false,
+                    input_html: { autocomplete: "new-user_name" } %>
+        <%= f.input :photo,
+                    as: :file,
+                    required: false,
+                    input_html: { autocomplete: "new-photo" } %>
+        <div class="edit-password">
+        <h4> Update Your password </h4>
+        <%= f.input :password,
+                    hint: "leave it blank if you don't want to change it",
+                    required: false,
+                    input_html: { autocomplete: "new-password" } %>
+        <%= f.input :password_confirmation,
+                    required: false,
+                    input_html: { autocomplete: "new-password" } %>
+        </div>
+        <h4>Confirm Changes</h4>
+        <%= f.input :current_password,
+                    hint: "we need your current password to confirm your changes",
+                    required: true,
+                    input_html: { autocomplete: "current-password" } %>
+      </div>
+
+      <div class="form-actions">
+        <%= f.button :submit, "Update" %>
+        <%= link_to "Back", :back %>
+      </div>
     <% end %>
 
-    <%= f.input :full_name,
-                required: false,
-                input_html: { autocomplete: "new-full_name" } %>
-    <%= f.input :user_name,
-                required: false,
-                input_html: { autocomplete: "new-user_name" } %>
-    <%= f.input :photo,
-                as: :file,
-                required: false,
-                input_html: { autocomplete: "new-photo" } %>
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+    
+</div>
