review basic styling done

--- a/app/assets/stylesheets/components/_reviews.scss
+++ b/app/assets/stylesheets/components/_reviews.scss
@@ -10,3 +10,9 @@
   background-color: #E0E0E0;
   outline-color: white;
 }
+
+.profile-icon {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+}
