--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -219,6 +219,7 @@
           <div class="row align-items-start" style="display: contents;">
             <div class="col">
               <h4>All reviews</h4>
+              <%= render @trip.reviews %>
             </div>
           </div>
         </div>
