added avg rating and count rating method and view

--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,5 +1,4 @@
-
-<div class="container">
+<div class="container divider">
   <!-- partial page for viewing reviews on trips -->
   <!-- User section -->
   <div class="row mb-1 review-head">
