--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,7 +24,7 @@
               <% end %>
             </div>
             <div id="userprofile-body" class="ps-3">
-              <div class="d-flex flex-column"> 
+              <div class="d-flex flex-column">
                 <h3 class="edit-profile-items">Lives in:</h3>
                 <p>Rio de Janeiro</p>
               </div>
@@ -33,6 +33,10 @@
                 <h3 class="edit-profile-items">Speaks:</h3>
                 <p>English, Portuguese, Estonian</p>
               </div>
+
+              <% if @user == current_user %>
+                <%= link_to "All reviews by you", reviews_path(@user) %>
+              <% end %>
 
             </div>
           </div>
@@ -56,7 +60,7 @@
                 <h3>About me:</h3>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised</p>
               </div>
-              <div class="col pt-5 text-center">
+              <div class="col pt-5">
               <h3>What kind of traveler I am:</h3>
                <ul>
                   <li>The user answers will be displayed here</li>
@@ -73,13 +77,9 @@
 
 <!-- Userprofile 2nd part -->
 <div class="container">
-<!-- User Reviews -->
-  <div class="user-review">
-    <h3>Reviews:</h3>
-  </div>
 <!-- User Bookings -->
 <div>
-  <div class="user-booking">
+  <div>
     <h3>Bookings</h3>
   </div>
   <div class="container mt-1 pt-0">
@@ -106,8 +106,7 @@
   </div>
 </div>
 <!-- User Bookmarks -->
-  <div class="container pt-0">
-  <div class="user-Favorites">
+  <div>
     <h3>Favorites</h3>
   </div>
 
