--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -6,6 +6,16 @@
       <div class="col">
       <%= link_to trip_path(review.trip), class: "link_to_class" do %>
         <div class="card h-100">
+        <!-- Dropdown menu -->
+         <div class="dropsend align-self-end mt-3 me-3">
+          <i class="fas fa-caret-circle-down dropdown-toggle"data-bs-toggle="dropdown" aria-expanded="false"></i>
+
+          <ul class="dropdown-menu">
+            <p class="ms-2">Edit</p>
+            <p class="ms-2">Delete</p>
+          </ul>
+        </div>
+
           <div class="card-body">
             <h5 class="card-title">Your trip: <strong><%= review.trip.name %></strong> </h5>
             <h6 class="card-text pt-3"> <%= review.title %></h6>
